    for adding a new method, respectively, to a construction environment
    or an arbitrary object (such as a class).

  - Fix the --debug=time option when the -j option is specified and all
    files are up to date.

  - Add a $SWIGOUTDIR variable to allow setting the swig -outdir option,
    and use it to identify files created by the swig -java option.

  From Leanid Nazdrynau:

  - When applying Tool modules after a construction environment has
    already been created, don't overwrite existing $CFILESUFFIX and
    $CXXFILESUFFIX value.

  From Jan Nijtmans:

  - Find Java anonymous classes when the next token after the name is
    an open parenthesis.

  From Tilo Prutz:

  - Add support for the file names that Java 1.5 (and 1.6) generates for
    nested anonymous inner classes, which are different from Java 1.4.

  From Adam Simpkins:

  - Allow worker threads to terminate gracefully when all jobs are
    finished.

  From Sohail Somani:

  - Add LaTeX scanner support for finding dependencies specified with
    the \usepackage{} directive.



RELEASE 0.97 - Thu, 17 May 2007 08:59:41 -0500

  From Steven Knight:

  - Fix a bug that would make parallel builds stop in their tracks if
    Nodes that depended on lists that contained some Nodes built together
    caused the reference count to drop below 0 if the Nodes were visited
    and commands finished in the wrong order.

  - Make sure the DirEntryScanner doesn't choke if it's handed something
    that's not a directory (Node.FS.Dir) Node.



RELEASE 0.96.96 - Thu, 12 Apr 2007 12:36:25 -0500

  NOTE:  This is (Yet) a(nother) pre-release of 0.97 for testing purposes.

  From Joe Bloggs:

  - Man page fix:  remove cut-and-paste sentence in NoCache() description.

  From Dmitry Grigorenko and Gary Oberbrunner:

  - Use the Intel C++ compiler, not $CC, to link C++ source.

  From Helmut Grohne:

  - Fix the man page example of propagating a user's external environment.

  From Steven Knight:
