@@ -33,13 +33,14 @@ selection method.
 
 __revision__ = "__FILE__ __REVISION__ __DATE__ __DEVELOPER__"
 
+import os.path
+import re
+
 import SCons.Action
 import SCons.Defaults
+import SCons.Scanner
 import SCons.Tool
 import SCons.Util
-from SCons.Scanner import Scanner
-import os
-import re
 
 SwigAction = SCons.Action.Action('$SWIGCOM', '$SWIGCOMSTR')
 
@@ -49,36 +50,7 @@ def swigSuffixEmitter(env, source):
     else:
         return '$SWIGCFILESUFFIX'
 
-_reInclude = re.compile(r'%include\s+(\S+)')
 _reModule = re.compile(r'%module\s+(.+)')
-
-def recurse(path, searchPath):
-    global _reInclude
-    f = open(path)
-    try: contents = f.read()
-    finally: f.close()
-
-    found = []
-    # Better code for when we drop Python 1.5.2.
-    #for m in _reInclude.finditer(contents):
-    #    fname = m.group(1)
-    for fname in _reInclude.findall(contents):
-        for dpath in searchPath:
-            absPath = os.path.join(dpath, fname)
-            if os.path.isfile(absPath):
-                found.append(absPath)
-                break
-
-    # Equivalent code for when we drop Python 1.5.2.
-    #for f in [f for f in found if os.path.splitext(f)[1] == ".i"]:
-    #    found += recurse(f, searchPath)
-    for f in filter(lambda f: os.path.splitext(f)[1] == ".i", found):
-        found = found + recurse(f, searchPath)
-    return found
-
-def _scanSwig(node, env, path):
-    r = recurse(str(node), [os.path.abspath(os.path.dirname(str(node))), os.path.abspath(os.path.join("include", "swig"))])
-    return r
 
 def _swigEmitter(target, source, env):
     for src in source:
@@ -117,8 +89,16 @@ def generate(env):
     env['SWIGCFILESUFFIX']   = '_wrap$CFILESUFFIX'
     env['SWIGCXXFILESUFFIX'] = '_wrap$CXXFILESUFFIX'
     env['_SWIGOUTDIR']       = '${"-outdir " + SWIGOUTDIR}'
-    env['SWIGCOM']           = '$SWIG -o $TARGET ${_SWIGOUTDIR} $SWIGFLAGS $SOURCES'
-    env.Append(SCANNERS=Scanner(function=_scanSwig, skeys=[".i"]))
+    env['SWIGPATH']          = []
+    env['SWIGINCPREFIX']     = '-I'
+    env['SWIGINCSUFFIX']     = ''
+    env['_SWIGINCFLAGS']     = '$( ${_concat(SWIGINCPREFIX, SWIGPATH, SWIGINCSUFFIX, __env__, RDirs, TARGET, SOURCE)} $)'
+    env['SWIGCOM']           = '$SWIG -o $TARGET ${_SWIGOUTDIR} ${_SWIGINCFLAGS} $SWIGFLAGS $SOURCES'
+
+    expr = '^[ \t]*%[ \t]*(?:include|import|extern)[ \t]*(<|"?)([^>\s"]+)(?:>|"?)'
+    scanner = SCons.Scanner.ClassicCPP("SWIGScan", ".i", "SWIGPATH", expr)
+
+    env.Append(SCANNERS = scanner)
 
 def exists(env):
     return env.Detect(['swig'])
